--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "i18next": "^19.6.3",
-    "uuidv4": "^6.2.6",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-modal-dialogs": "^3.0.0",
     "vue-router": "^3.2.0",
